# xorg-libice

./: .cvsignore  .gitignore  ChangeLog  Makefile.am  autogen.sh  configure.ac  ice.pc.in
doc/: ICElib.xml  Makefile.am
include/X11/ICE/: ICElib.h  ICEmsg.h  ICEutil.h
specs/: Makefile.am  ice.xml
src/: .gitignore  ICElibint.h  Makefile.am  accept.c  authutil.c  connect.c  error.c  getauth.c  globals.h  iceauth.c  icetrans.c  listen.c  listenwk.c  misc.c  process.c  protosetup.c  register.c  replywait.c  setauth.c  shutdown.c  watch.c
